--- a/style.css
+++ b/style.css
@@ -414,17 +414,13 @@ html {
   margin-right: 20px;
 }
 
-.team-member-content {
-  display: flex;
-  flex-direction: column;
-}
-
 .team-member h3 {
   font-size: 24px;
   color: #c63f3f;
 }
 
 .team-member p {
+  font-size: 24px;
   padding: 10px;
   margin: 0;
   color: var(--text-color);
